99-production-ready-cluster/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-gateway
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 8080 # Public HTTP REST / gRPC
    - protocol: TCP
      port: 8081 # Prometheus scrape
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-order-service
spec:
  podSelector:
    matchLabels:
      app: order-service
  policyTypes:
  - Ingress
  ingress:
  # Only allow ingress traffic from api-gateway pods to gRPC port
  - from:
    - podSelector:
        matchLabels:
          app: api-gateway
    ports:
    - protocol: TCP
      port: 50068
  # Allow Prometheus to scrape metrics
  - ports:
    - protocol: TCP
      port: 8083
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-user-service
spec:
  podSelector:
    matchLabels:
      app: user-service
  policyTypes:
  - Ingress
  ingress:
  # Zero Trust: User service ONLY accepts calls from order-service!
  - from:
    - podSelector:
        matchLabels:
          app: order-service
    ports:
    - protocol: TCP
      port: 50069
  # Allow Prometheus to scrape metrics
  - ports:
    - protocol: TCP
      port: 8082
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-xds-control-plane
spec:
  podSelector:
    matchLabels:
      app: xds-control-plane
  policyTypes:
  - Ingress
  ingress:
  # Allow xDS discovery queries from api-gateway and order-service
  - from:
    - podSelector:
        matchLabels:
          app: api-gateway
    - podSelector:
        matchLabels:
          app: order-service
    ports:
    - protocol: TCP
      port: 15010
